<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Zendroidcomic</string>
    <string name="pref_comic_list_header">Enabled Comics</string>
    <string name="pref_comic_list_summary">Disable some comics from being queried</string>
    <string name="pref_comic_cache">Image cache size</string>
    <string name="pref_comic_cache_summary">How many image to keep in memory for smooth scroll back</string>
    <string name="comicCachePref">pref_comic_cache_widget</string>
    <string name="prefComicDilbert">prefComicDilbert</string>
    <string name="prefComicXkcd">prefComicXkcd</string>
    <string name="prefComicTrollcats">prefComicTrollcats</string>
    <string name="prefComicGarfield">prefComicGarfield</string>
    <string name="prefComicPhdcomic">prefComicPhdcomic</string>
    <string name="prefComicExplosm">prefComicExplosm</string>
    <string name="comicShowAd">comicShowAd</string>
    <string name="comicShowToast">comicShowToast</string>
    <string name="pref_comic_ad_header">Show Ad</string>
    <string name="pref_comic_ad_summary">If you don\'t want me to be millionaire, no worries</string>
    <string name="pref_comic_toast_header">Show toast messages</string>
    <string name="pref_comic_toast_summary">Control if a toast message with comic informations is shown when you change focus</string>
</resources>
